# notarias

./: .dockerignore  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  auditoria_v63.txt  codigo_completo.txt  codigo_completo2.txt  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  openclaw-maintenance.yml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/pipeline/: act_engine.py  boilerplate.py  debug_dump.py  json_repair.py  orchestrator.py  prompts.py  steps.py
app/rag_store/: acto_cambio_nombre.txt  acto_cancelacion.txt  acto_hipoteca_P2.txt
app/schemas/: models.py
app/services/: case_manager.py  docx_feedback.py  gemini_client.py  google_drive.py  openai_client.py  openclaw_client.py  openclaw_maintenance.py  rag_store.py
app/templates/: plantilla_notarial.docx
ops/deploy/: backend.env.example  docker-compose.yml
ops/openclaw/: AUTO_TUNE_SMOKETEST.md  README.md  backend-maintenance-prompt.md  report_backend_maintenance_status.sh
outputs/CASE-16921534/: Minuta_Caso_16921534.docx
outputs/CASE-2025/: Minuta_Caso_2025.docx
outputs/CASE-21044593/: Minuta_Caso_21044593.docx
outputs/CASE-25278/: Minuta_Caso_25278.docx
outputs/CASE-69555609/: Minuta_Caso_69555609.docx
outputs/CASE-92333511/: Minuta_Caso_92333511.docx
tests/: helpers_docx.py  test_act_regressions.py  test_boilerplate_regressions.py  test_case_iteration_api.py  test_case_manager_feedback.py  test_ctl_300_62293.py  test_docx_feedback.py  test_openclaw_maintenance.py  test_radicado_extraction.py
tools/: export_clean_minutas.py
(+171 files in other folders)
